# news-recommender-system

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  baseline_model.ipynb  baseline_model_ctr.ipynb  content_based_model_sentence_transformer.ipynb  content_based_model_tf_idf.ipynb  evaluation.ipynb  pyproject.toml
.dvc/: config
data/: raw.dvc
docs/: mkdocs.yml
docs/docs/: index.md
emissions/: emissions.csv  emissions_report_baseline_ctr_24.txt  emissions_report_cbf_tf_idf.txt
hs_work/: all_classifier_predictions.csv  bpr_carbon_output.py  data_exp_view.py  data_for_classifierv2.csv  data_for_classifierv3.csv  decision_tree_vis.py  evaluation.py  exp_bpr.py  hybrid_classifiers.py  hybrid_model_results.txt  magic_box.py  magic_models_eval.py  model_best.csv  primitive_mind_bpr.py  scores_cf.txt
hs_work/collab_filtering/: primitive_mind_bpr.py
hs_work/emissions/: emissions.csv  emissions_report_baseline.txt  emissions_report_baseline_ctr_72.txt  emissions_report_cbf_st.txt
hs_work/other_models/: lstur_MIND.ipynb  matrix_factorization_negative_sampling.ipynb
hs_work/outputs_and_truth/: sort_py.py
input/hybrid_model/: data_for_classifierv1.csv  hybrid_model_decision_factors.txt
input/ref/: sort_py.py
news_recommender_system/: __init__.py  bpr_carbon_output.py  carbon_tracking.py  config.py  dataset.py  decision_tree_vis.py  evaluation.py  features.py  plots.py  sort_truth.py
news_recommender_system/modeling/: baseline_ctr.py  predict.py  train.py
notebooks/: baseline_model.ipynb  baseline_model_ctr.ipynb  content_based_model_sentence_transformer.ipynb  content_based_model_tf_idf.ipynb  evaluation.ipynb  old_matrix_factorization.ipynb
output/: scores_val_baseline.txt  scores_val_baseline_ctr_1w.txt  scores_val_baseline_ctr_24.txt  scores_val_baseline_ctr_48.txt  scores_val_baseline_ctr_72.txt  scores_val_bpr.txt  scores_val_cbf_st.txt  scores_val_cbf_tf_idf.txt
reports/emissions/: baseline.txt  emissions.csv  emissions_report_baseline_ctr_12.txt  emissions_report_baseline_ctr_1w.txt  emissions_report_baseline_ctr_48.txt
reports/metrics/: scores_val_baseline_ctr.txt  scores_val_baseline_ctr_12.txt
src/: data_exp_view.py  decision_tree_vis.py  hybrid_classifiers.py  magic_models_eval.py  primitive_mind_bpr.py
