[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "news_recommender_system"
version = "0.0.1"
description = "Developing and benchmarking content-based, collaborative, and hybrid models for personalized news recommendations."
authors = [
  { name = "Joscha" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "black",
    "flake8",
    "isort",
    "loguru",
    "mkdocs",
    "pip",
    "pytest",
    "python-dotenv",
    "tqdm",
    "typer",
]
requires-python = "~=>=3.11.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["news_recommender_system"]
force_sort_within_sections = true


